pkg/kubeproxy/app/iptables-save
# Generated by iptables-save v1.8.4 on Fri May 19 07:08:38 2023
*mangle
:PREROUTING ACCEPT [290774:34689940]
:INPUT ACCEPT [290762:34689098]
:FORWARD ACCEPT [10:696]
:OUTPUT ACCEPT [289871:39403571]
:POSTROUTING ACCEPT [289887:39404705]
:WEAVE-CANARY - [0:0]
COMMIT
# Completed on Fri May 19 07:08:38 2023
# Generated by iptables-save v1.8.4 on Fri May 19 07:08:38 2023
*filter
:INPUT ACCEPT [1218:144224]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1229:145777]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
:WEAVE-CANARY - [0:0]
:WEAVE-EXPOSE - [0:0]
-A INPUT -d 172.17.0.1/32 -i docker0 -p tcp -m tcp --dport 6783 -j DROP
-A INPUT -d 172.17.0.1/32 -i docker0 -p udp -m udp --dport 6783 -j DROP
-A INPUT -d 172.17.0.1/32 -i docker0 -p udp -m udp --dport 6784 -j DROP
-A INPUT -i docker0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i docker0 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -d 127.0.0.1/32 -p tcp -m tcp --dport 6784 -m addrtype ! --src-type LOCAL -m conntrack ! --ctstate RELATED,ESTABLISHED -m comment --comment "Block non-local access to Weave Net control port" -j DROP
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o weave -j DROP
-A FORWARD -i weave -o weave -j ACCEPT
-A FORWARD -o weave -j WEAVE-EXPOSE
-A FORWARD -i weave ! -o weave -j ACCEPT
-A FORWARD -o weave -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
-A WEAVE-EXPOSE -d 10.32.0.0/12 -j ACCEPT
COMMIT
# Completed on Fri May 19 07:08:38 2023
# Generated by iptables-save v1.8.4 on Fri May 19 07:08:38 2023
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:DOCKER - [0:0]
:KUBE-MARK-MASQ - [0:0]
:KUBE-POSTROUTING - [0:0]
:KUBE-SEP-O7TqyMoCcqq6 - [0:0]
:KUBE-SEP-Sb9SdMfNBgrE - [0:0]
:KUBE-SERVICES - [0:0]
:KUBE-SVC-8w7mbHLnjV2j - [0:0]
:KUBE-SVC-CAn8lDS8nGjJ - [0:0]
:KUBE-SVC-MrEvXbr3fjc7 - [0:0]
:KUBE-SVC-XI058FlXh0jD - [0:0]
:KUBE-SVC-gEwbpTaKcBsG - [0:0]
:KUBE-SVC-wBe0FNR70IOv - [0:0]
:WEAVE - [0:0]
:WEAVE-CANARY - [0:0]
-A PREROUTING -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A POSTROUTING -m comment --comment "kubernetes postrouting rules" -j KUBE-POSTROUTING
-A DOCKER -i docker0 -j RETURN
-A KUBE-MARK-MASQ -j MARK --set-xmark 0x4000/0x4000
-A KUBE-MARK-MASQ -j MARK --set-xmark 0x4000/0x4000
-A KUBE-MARK-MASQ -j MARK --set-xmark 0x4000/0x4000
-A KUBE-POSTROUTING -m comment --comment "kubernetes service traffic requiring SNAT" -m mark --mark 0x4000/0x4000 -j MASQUERADE
-A KUBE-POSTROUTING -m comment --comment "kubernetes service traffic requiring SNAT" -m mark --mark 0x4000/0x4000 -j MASQUERADE
-A KUBE-POSTROUTING -m comment --comment "kubernetes service traffic requiring SNAT" -m mark --mark 0x4000/0x4000 -j MASQUERADE
-A KUBE-SEP-O7TqyMoCcqq6 -s 10.32.0.3/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-O7TqyMoCcqq6 -p tcp -j DNAT --to-destination 10.32.0.3:80
-A KUBE-SEP-Sb9SdMfNBgrE -s 10.32.0.2/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-Sb9SdMfNBgrE -p tcp -j DNAT --to-destination 10.32.0.2:80
-A KUBE-SERVICES -d 192.168.118.145/32 -p tcp -m comment --comment "service-example: cluster IP" -m tcp --dport 88 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 192.168.118.145/32 -p tcp -m comment --comment "service-example: cluster IP" -m tcp --dport 88 -j KUBE-SVC-gEwbpTaKcBsG
-A KUBE-SERVICES -d 192.168.118.112/32 -p tcp -m comment --comment "service-example: cluster IP" -m tcp --dport 88 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 192.168.118.112/32 -p tcp -m comment --comment "service-example: cluster IP" -m tcp --dport 88 -j KUBE-SVC-MrEvXbr3fjc7
-A KUBE-SVC-MrEvXbr3fjc7 -m statistic --mode random --probability 0.00000000000 -j KUBE-SEP-O7TqyMoCcqq6
-A KUBE-SVC-MrEvXbr3fjc7 -j KUBE-SEP-Sb9SdMfNBgrE
-A WEAVE -s 10.32.0.0/12 -d 224.0.0.0/4 -j RETURN
-A WEAVE ! -s 10.32.0.0/12 -d 10.32.0.0/12 -j MASQUERADE
-A WEAVE -s 10.32.0.0/12 ! -d 10.32.0.0/12 -j MASQUERADE
COMMIT
# Completed on Fri May 19 07:08:38 2023
