pkg/kubeproxy/app/test-save-iptables
# Generated by iptables-save v1.8.4 on Fri May 12 05:14:47 2023
*mangle
:PREROUTING ACCEPT [1500290:796579380]
:INPUT ACCEPT [1500252:796574426]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1462923:235475225]
:POSTROUTING ACCEPT [1463126:235496793]
:WEAVE-CANARY - [0:0]
COMMIT
# Completed on Fri May 12 05:14:47 2023
# Generated by iptables-save v1.8.4 on Fri May 12 05:14:47 2023
*filter
:INPUT ACCEPT [63:5427]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [63:5583]
COMMIT
# Completed on Fri May 12 05:14:47 2023
# Generated by iptables-save v1.8.4 on Fri May 12 05:14:47 2023
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:DOCKER - [0:0]
:KUBE-MARK-MASQ - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-POSTROUTING - [0:0]
:KUBE-SEP-0Xr06Zy9Yn9m - [0:0]
:KUBE-SEP-4PJ9OvFE0xpk - [0:0]
:KUBE-SEP-9EFMMOczDJqV - [0:0]
:KUBE-SEP-D5kABvEeuwAA - [0:0]
:KUBE-SEP-Hug6X8XTeZZ5 - [0:0]
:KUBE-SEP-J4p4Yql6CFbR - [0:0]
:KUBE-SEP-MYdYc51m3gf3 - [0:0]
:KUBE-SEP-PdBqnSXXr0Dx - [0:0]
:KUBE-SEP-PiCW1Rl7qTLn - [0:0]
:KUBE-SEP-QAZv685iNbvz - [0:0]
:KUBE-SEP-QKwcpC32FvOt - [0:0]
:KUBE-SEP-SaLmGd3Orerj - [0:0]
:KUBE-SEP-awhWboXPRJ9L - [0:0]
:KUBE-SEP-cYueAYHtmIDq - [0:0]
:KUBE-SEP-fZNvdHuturFS - [0:0]
:KUBE-SEP-nO3dvWBnJnP0 - [0:0]
:KUBE-SEP-pz6SGB9GSHG1 - [0:0]
:KUBE-SEP-tKEhmB8VFysC - [0:0]
:KUBE-SEP-xavamVljWvme - [0:0]
:KUBE-SEP-zZppVZeDjJQ5 - [0:0]
:KUBE-SERVICES - [0:0]
:KUBE-SVC-3btWWZSwtgou - [0:0]
:KUBE-SVC-5K68p5ldOXDz - [0:0]
:KUBE-SVC-7Ceen5AEFZg1 - [0:0]
:KUBE-SVC-878gSa0YLdew - [0:0]
:KUBE-SVC-8EGUs48ZF3v0 - [0:0]
:KUBE-SVC-Bd3zNaXO2eP7 - [0:0]
:KUBE-SVC-Eeq6s9VIMeYT - [0:0]
:KUBE-SVC-FM3PvDWxgZSa - [0:0]
:KUBE-SVC-G6S9qBB3yf5G - [0:0]
:KUBE-SVC-HYQUABjkiAF8 - [0:0]
:KUBE-SVC-JxmxoSTqXlCi - [0:0]
:KUBE-SVC-Ojvv2aPV676l - [0:0]
:KUBE-SVC-Ok52ZHS1b27x - [0:0]
:KUBE-SVC-PvnXLIP9nsZC - [0:0]
:KUBE-SVC-TnJC0sJXFUjD - [0:0]
:KUBE-SVC-XwaDIccAElj5 - [0:0]
:KUBE-SVC-YuSGjEvmDpnl - [0:0]
:KUBE-SVC-cAmQ2B7F6osu - [0:0]
:KUBE-SVC-cJZnxfmqmC09 - [0:0]
:KUBE-SVC-f8jmZQPd1T4T - [0:0]
:KUBE-SVC-g5Ka6AaRKDmT - [0:0]
:KUBE-SVC-gTYenRttGzIp - [0:0]
:KUBE-SVC-mui1mxXGh9v3 - [0:0]
:KUBE-SVC-ojt04n0t90oF - [0:0]
:WEAVE - [0:0]
:WEAVE-CANARY - [0:0]
-A DOCKER -i docker0 -j RETURN
-A KUBE-SEP-PdBqnSXXr0Dx -s 10.32.0.1/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-awhWboXPRJ9L -s 10.32.0.1/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-nO3dvWBnJnP0 -s 10.32.0.1/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-zZppVZeDjJQ5 -s 10.32.0.1/32 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.244.137.121/32 -p tcp -m comment --comment "service-example: cluster IP" -m tcp --dport 80 -m tcp -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.244.137.121/32 -p tcp -m comment --comment "service-example: cluster IP" -m tcp --dport 80 -m tcp -j KUBE-SVC-7Ceen5AEFZg1
-A KUBE-SERVICES -d 10.244.238.119/32 -p tcp -m comment --comment "service-example: cluster IP" -m tcp --dport 80 -m tcp -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.244.238.119/32 -p tcp -m comment --comment "service-example: cluster IP" -m tcp --dport 80 -m tcp -j KUBE-SVC-Ok52ZHS1b27x
-A KUBE-SERVICES -d 10.244.219.23/32 -p tcp -m comment --comment "service-example: cluster IP" -m tcp --dport 80 -m tcp -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.244.219.23/32 -p tcp -m comment --comment "service-example: cluster IP" -m tcp --dport 80 -m tcp -j KUBE-SVC-g5Ka6AaRKDmT
-A KUBE-SERVICES -d 10.244.187.119/32 -p tcp -m comment --comment "service-example: cluster IP" -m tcp --dport 80 -m tcp -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.244.187.119/32 -p tcp -m comment --comment "service-example: cluster IP" -m tcp --dport 80 -m tcp -j KUBE-SVC-f8jmZQPd1T4T
-A KUBE-SERVICES -d 10.244.205.254/32 -p tcp -m comment --comment "service-example: cluster IP" -m tcp --dport 80 -m tcp -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.244.205.254/32 -p tcp -m comment --comment "service-example: cluster IP" -m tcp --dport 80 -m tcp -j KUBE-SVC-878gSa0YLdew
-A KUBE-SERVICES -d 10.244.7.205/32 -p tcp -m comment --comment "service-example: cluster IP" -m tcp --dport 80 -m tcp -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.244.7.205/32 -p tcp -m comment --comment "service-example: cluster IP" -m tcp --dport 80 -m tcp -j KUBE-SVC-mui1mxXGh9v3
-A KUBE-SERVICES -d 10.244.218.136/32 -p tcp -m comment --comment "service-example: cluster IP" -m tcp --dport 80 -m tcp -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.244.218.136/32 -p tcp -m comment --comment "service-example: cluster IP" -m tcp --dport 80 -m tcp -j KUBE-SVC-Eeq6s9VIMeYT
-A KUBE-SERVICES -d 10.244.92.68/32 -p tcp -m comment --comment "service-example: cluster IP" -m tcp --dport 80 -m tcp -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.244.92.68/32 -p tcp -m comment --comment "service-example: cluster IP" -m tcp --dport 80 -m tcp -j KUBE-SVC-Bd3zNaXO2eP7
-A KUBE-SERVICES -d 10.244.180.35/32 -p tcp -m comment --comment "service-example: cluster IP" -m tcp --dport 80 -m tcp -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.244.180.35/32 -p tcp -m comment --comment "service-example: cluster IP" -m tcp --dport 80 -m tcp -j KUBE-SVC-JxmxoSTqXlCi
-A KUBE-SERVICES -d 10.244.82.50/32 -p tcp -m comment --comment "service-example: cluster IP" -m tcp --dport 80 -m tcp -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.244.82.50/32 -p tcp -m comment --comment "service-example: cluster IP" -m tcp --dport 80 -m tcp -j KUBE-SVC-8EGUs48ZF3v0
-A KUBE-SERVICES -d 10.244.88.36/32 -p tcp -m comment --comment "service-example: cluster IP" -m tcp --dport 80 -m tcp -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.244.88.36/32 -p tcp -m comment --comment "service-example: cluster IP" -m tcp --dport 80 -m tcp -j KUBE-SVC-cJZnxfmqmC09
-A KUBE-SERVICES -d 10.244.63.182/32 -p tcp -m comment --comment "service-example: cluster IP" -m tcp --dport 80 -m tcp -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.244.63.182/32 -p tcp -m comment --comment "service-example: cluster IP" -m tcp --dport 80 -m tcp -j KUBE-SVC-5K68p5ldOXDz
-A KUBE-SERVICES -d 10.244.60.134/32 -p tcp -m comment --comment "service-example: cluster IP" -m tcp --dport 80 -m tcp -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.244.60.134/32 -p tcp -m comment --comment "service-example: cluster IP" -m tcp --dport 80 -m tcp -j KUBE-SVC-FM3PvDWxgZSa
-A KUBE-SERVICES -d 10.244.218.252/32 -p tcp -m comment --comment "service-example: cluster IP" -m tcp --dport 80 -m tcp -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.244.218.252/32 -p tcp -m comment --comment "service-example: cluster IP" -m tcp --dport 80 -m tcp -j KUBE-SVC-HYQUABjkiAF8
-A KUBE-SVC-3btWWZSwtgou -m statistic --mode random --probability 0.00000000000 -j KUBE-SEP-xavamVljWvme
-A KUBE-SVC-3btWWZSwtgou -m statistic --mode random --probability 0.00000000000 -j KUBE-SEP-0Xr06Zy9Yn9m
-A KUBE-SVC-3btWWZSwtgou -j KUBE-SEP-zZppVZeDjJQ5
-A KUBE-SVC-G6S9qBB3yf5G -m statistic --mode random --probability 0.00000000000 -j KUBE-SEP-PiCW1Rl7qTLn
-A KUBE-SVC-G6S9qBB3yf5G -j KUBE-SEP-D5kABvEeuwAA
-A KUBE-SVC-Ojvv2aPV676l -m statistic --mode random --probability 0.00000000000 -j KUBE-SEP-4PJ9OvFE0xpk
-A KUBE-SVC-Ojvv2aPV676l -j KUBE-SEP-Hug6X8XTeZZ5
-A KUBE-SVC-PvnXLIP9nsZC -m statistic --mode random --probability 0.00000000000 -j KUBE-SEP-QKwcpC32FvOt
-A KUBE-SVC-PvnXLIP9nsZC -j KUBE-SEP-tKEhmB8VFysC
-A KUBE-SVC-XwaDIccAElj5 -m statistic --mode random --probability 0.00000000000 -j KUBE-SEP-9EFMMOczDJqV
-A KUBE-SVC-XwaDIccAElj5 -m statistic --mode random --probability 0.00000000000 -j KUBE-SEP-cYueAYHtmIDq
-A KUBE-SVC-XwaDIccAElj5 -j KUBE-SEP-nO3dvWBnJnP0
-A KUBE-SVC-cAmQ2B7F6osu -m statistic --mode random --probability 0.00000000000 -j KUBE-SEP-fZNvdHuturFS
-A KUBE-SVC-cAmQ2B7F6osu -j KUBE-SEP-SaLmGd3Orerj
-A KUBE-SVC-gTYenRttGzIp -m statistic --mode random --probability 0.00000000000 -j KUBE-SEP-pz6SGB9GSHG1
-A KUBE-SVC-gTYenRttGzIp -m statistic --mode random --probability 0.00000000000 -j KUBE-SEP-J4p4Yql6CFbR
-A KUBE-SVC-gTYenRttGzIp -j KUBE-SEP-PdBqnSXXr0Dx
-A KUBE-SVC-ojt04n0t90oF -m statistic --mode random --probability 0.00000000000 -j KUBE-SEP-QAZv685iNbvz
-A KUBE-SVC-ojt04n0t90oF -m statistic --mode random --probability 0.00000000000 -j KUBE-SEP-MYdYc51m3gf3
-A KUBE-SVC-ojt04n0t90oF -j KUBE-SEP-awhWboXPRJ9L
-A WEAVE -s 10.244.0.0/16 -d 224.0.0.0/4 -j RETURN
-A WEAVE ! -s 10.244.0.0/16 -d 10.244.0.0/16 -j MASQUERADE
-A WEAVE -s 10.244.0.0/16 ! -d 10.244.0.0/16 -j MASQUERADE
COMMIT
# Completed on Fri May 12 05:14:47 2023
